# bananabread

./: README.md
C-NN/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  catch_main.cpp  clean.sh  cmake_install.cmake  cnn.cpp  cnn.hpp  cnn_math.cpp  cnn_math.hpp  eigen_test  eigen_test.cpp  get_autodiff.sh  get_catch2.sh  get_csv_parser.sh  get_eigen3.sh  get_igl.sh  get_libtorch.sh  get_optim.sh  main  main.cpp  trial  trial.cpp
C-NN/include/: cnn.hpp  cnn_math.hpp
C-NN/tests/: catch.cpp  csv.cpp  example_catch.cpp  main.cpp  main.out
C-NN/torch_tests/: CMakeLists.txt  example-app.cpp
